--- a/Ejercicios/Ejercicio6.html
+++ b/Ejercicios/Ejercicio6.html
@@ -24,7 +24,7 @@
 
         <p>Etiam consectetuer, mauris vitae cursus scelerisque, dui turpis dignissim justo, et euismod enim odio sit amet erat.</p>
 
-        <p><a href="../imagenes/proyecto2.png" title="Imagen del Proyecto 2">Ver imagen del Proyecto 2</a></p>
+        <p><a href="../Imagenes/proyecto2.png" title="Imagen del Proyecto 2">Ver imagen del Proyecto 2</a></p>
 
     </body>
 
