--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ height: 45px;
     </style>
 </head>
 <body>
-    <h1>Desarrollo de Servicios</h1>
+    <h1>Josué Elías Santana - Desarrollo de Servicios</h1>
     <ol>
         <li><a href="Ejercicios/Ejercicio1.html">Ejercicio 1</a></li>
         <li><a href="Ejercicios/Ejercicio2.html">Ejercicio 2</a></li>
