--- a/Ejercicios/Ejercicio6.html
+++ b/Ejercicios/Ejercicio6.html
@@ -8,7 +8,7 @@
 
     <body>
 
-        <p><a href="../index.html" title="Página principal de Mi Sitio">Volver a la pagina principal</a></p>
+        <p><a href="../index.html#proyectos" title="Página principal de Mi Sitio">Volver a la pagina principal</a></p>
 
         <h1>Ultimos proyectos</h1>
 
