--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </section>
 
 
-<!-- PROYECTOS -->
+<!-- EJERCICIOS -->
 
 <section id="proyectos" class="proyectos">
   <h2 class="cabecera-proyectos">MIS EJERCICIOS</h2>
