--- a/Ejercicios2/Ejercicio10.html
+++ b/Ejercicios2/Ejercicio10.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<p><a href="index2.html" title="Página principal de Mi Sitio" rel="index">Volver a la pagina principal</a></p>
+<p><a href="../index2.html" title="Página principal de Mi Sitio" rel="index">Volver a la pagina principal</a></p>
 
 <h1>Ultimos proyectos</h1>
 
