--- a/EjerciciosCSS/HTML/Ejercicio3.html
+++ b/EjerciciosCSS/HTML/Ejercicio3.html
@@ -93,12 +93,12 @@
 
 
             <div id="secundario">
-                <h2>Phasellus blandit</h2>
-                <p>Praesent sodales imperdiet augue. Mauris lorem felis, semper eu, tincidunt eu, sollicitudin eget, sem. Nulla facilisi. Morbi ut enim ut enim ultricies dapibus.</p>
-                <p><a href="#">Seguir leyendo...</a></p>
-                <h2>Nullam vel turpis</h2>
-                <p>Donec commodo, turpis vel venenatis sollicitudin, quam ante convallis justo, sed eleifend justo lectus quis sapien. Ut consequat libero eget est.</p>
-                <p><a href="#">Seguir leyendo...</a></p>
+                <h2>Soluciones</h2>
+                <p>Creemos automatización para impulsar la innovación, Descubra cómo lograr que las personas sean más productivas, los procesos más eficientes y los sistemas de TI más proactivos</p>
+                <p><a href="https://www.ibm.com/es-es/automation?lnk=flathl">Seguir leyendo...</a></p>
+                <h2>Gestión de datos para agilidad y eficiencia</h2>
+                <p>La gestión de datos de IBM ayuda a mejorar los resultados mediante el uso de cualquier dato para analítica o aplicaciones en cualquier nube y le ayuda a automatizar la gestión de datos end-to-end.</p>
+                <p><a href="https://www.ibm.com/es-es/data-management?lnk=flatitem">Seguir leyendo...</a></p>
             </div>
 
             </div>
