--- a/EjerciciosCSS/HTML/Ejercicio1.html
+++ b/EjerciciosCSS/HTML/Ejercicio1.html
@@ -10,13 +10,13 @@
     <body>
 
         <div id="primero">
-            <p>Lorem ipsum dolor sit amet, <a href="#">consectetuer adipiscing elit</a>. Praesent blandit nibh at felis. Sed nec diam in dolor vestibulum aliquet. Duis ullamcorper, nisi non facilisis molestie, <em>lorem sem aliquam nulla</em>, id lacinia velit mi vestibulum enim.</p>
+            <p>El pasado fin de semana tuvo lugar el Metaverse Social Hub Hackaton de IBM. Un evento que se celebró en las instalaciones del <a href="#">IBM Innovation Studio de Madrid </a>. de la mano de My Tech Plan, MyPublicInbox y con la colaboración de <em>Madrid in Game</em>, El objetivo era resolver un reto.</p>
         </div>
 
         <div class="normal">
-            <p>Phasellus eu velit sed lorem sodales egestas. Ut feugiat. <span><a href="#">Donec porttitor</a>, magna eu varius luctus,</span> metus massa tristique massa, in imperdiet est velit vel magna. Phasellus erat. Duis risus. <a href="#">Maecenas dictum</a>, nibh vitae pellentesque auctor, tellus velit consectetuer tellus, tempor pretium felis tellus at metus.</p>
-            <p>Cum sociis natoque <em class="especial">penatibus et magnis</em> dis parturient montes, nascetur ridiculus mus. Proin aliquam convallis ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc aliquet. Sed eu metus. Duis justo.</p>
-            <p>Donec facilisis blandit velit. Vestibulum nisi. Proin volutpat, <em class="especial">enim id iaculis congue</em>, orci justo ultrices tortor, <a href="#">quis lacinia eros libero in eros</a>. Sed malesuada dui vel quam. Integer at eros.</p>
+            <p>Como explicó Olga Blanco, Vicepresident & Senior Partner – Public Sector Leader para España de <span><a href="#">IBM Consulting</a>, el espíritu y objetivo de esta iniciativa es explorar el futuro,</span> nos hemos puesto como objetivo incluir las capacidades del vídeojuego en el <a href="#">Metaverso</a>, y cómo este nuevo mundo puede tener un impacto positivo en las relaciones sociales y en el negocio, sobre todo a nivel más local</p>
+            <p>Esto forma parte del ADN de <em class="especial">IBM y su equipo</em> y llevamos muchos años poniendo todas nuestras capacidades para lograrlo.</p>
+            <p>Tratamos de diseñar, construir e implementar el modelo tecnológico que nos permita construir un <em class="especial">mundo mejor</em>, poniendo a las personas en el centro de <a href="#">IBM</a>. A esta camapaña la llamamos Let's Create</p>
         </div>
 
     </body>
