--- a/EjerciciosCSS/HTML/Ejercicio1.html
+++ b/EjerciciosCSS/HTML/Ejercicio1.html
@@ -10,11 +10,11 @@
     <body>
 
         <div id="primero">
-            <p>El pasado fin de semana tuvo lugar el Metaverse Social Hub Hackaton de IBM. Un evento que se celebró en las instalaciones del <a href="#">IBM Innovation Studio de Madrid </a>. de la mano de My Tech Plan, MyPublicInbox y con la colaboración de <em>Madrid in Game</em>, El objetivo era resolver un reto.</p>
+            <p>El pasado fin de semana tuvo lugar el Metaverse Social Hub Hackaton de IBM. Un evento que se celebró en las instalaciones del <a href="https://www.ibm.com/about/innovation-studio">IBM Innovation Studio de Madrid </a>. de la mano de My Tech Plan, MyPublicInbox y con la colaboración de <em>Madrid in Game</em>, El objetivo era resolver un reto.</p>
         </div>
 
         <div class="normal">
-            <p>Como explicó Olga Blanco, Vicepresident & Senior Partner – Public Sector Leader para España de <span><a href="#">IBM Consulting</a>, el espíritu y objetivo de esta iniciativa es explorar el futuro,</span> nos hemos puesto como objetivo incluir las capacidades del vídeojuego en el <a href="#">Metaverso</a>, y cómo este nuevo mundo puede tener un impacto positivo en las relaciones sociales y en el negocio, sobre todo a nivel más local</p>
+            <p>Como explicó Olga Blanco, Vicepresident & Senior Partner – Public Sector Leader para España de <span><a href="https://www.ibm.com/consulting/es-es/">IBM Consulting</a>, el espíritu y objetivo de esta iniciativa es explorar el futuro,</span> nos hemos puesto como objetivo incluir las capacidades del vídeojuego en el <a href="https://es.wikipedia.org/wiki/Metaverso">Metaverso</a>, y cómo este nuevo mundo puede tener un impacto positivo en las relaciones sociales y en el negocio, sobre todo a nivel más local</p>
             <p>Esto forma parte del ADN de <em class="especial">IBM y su equipo</em> y llevamos muchos años poniendo todas nuestras capacidades para lograrlo.</p>
             <p>Tratamos de diseñar, construir e implementar el modelo tecnológico que nos permita construir un <em class="especial">mundo mejor</em>, poniendo a las personas en el centro de <a href="#">IBM</a>. A esta camapaña la llamamos Let's Create</p>
         </div>
