--- a/EjerciciosCSS/HTML/Ejercicio2.html
+++ b/EjerciciosCSS/HTML/Ejercicio2.html
@@ -8,50 +8,48 @@
 </head>
 
   <body>
-      <h1 id="titulo">Lorem ipsum dolor sit amet</h1>
+      <h1 id="titulo">Paletas de colores en hexadecimales</h1>
 
-      <p>Nulla pretium. Sed tempus nunc vitae neque. <strong>Suspendisse gravida</strong>, metus a scelerisque sollicitudin, lacus velit
-      ultricies nisl, nonummy tempus neque diam quis felis. <span class="destacado">Etiam sagittis tortor</span> sed arcu sagittis tristique.</p>
+      <p>Con diseño plano, diseño materiales gráficos y de colores web <strong>seguro</strong>, todo a través de nuestras paletas de colores <span class="destacado">buscando en las tablas</span> de forma muy sencilla</p>
 
-      <h2 id="subtitulo">Aliquam tincidunt, sem eget volutpat porta</h2>
+      <h2 id="subtitulo">Tablas de códigos</h2>
 
-      <p>Vivamus velit dui, placerat vel, feugiat in, ornare et, urna.  <a href="#">Aenean turpis metus, <em>aliquam non</em>, tristique in</a>, pretium varius, sapien. Proin vitae nisi.  Suspendisse <span class="especial">porttitor purus ac elit</span>. Suspendisse eleifend odio at dui. In in elit sed metus pretium elementum.</p>
+      <p>Diseño plano o colores de IU son bastante populares en diseño web hoy,  <a href="#">en negrita, <em>y cursiva</em>, arial</a>, se utilizan colores claros para crear interfaces limpias y sencillas.<span class="especial">materiales es un lenguaje visual</span>. y diseño sistema desarrollado por Google con un estilo casi planas y brillantes colores.</p>
 
       <table summary="Descripción de la tabla y su contenido">
-          <caption>Título de la tabla</caption>
+          <caption>Colores</caption>
           <thead>
             <tr>
               <th scope="col"></th>
-              <th scope="col" class="especial">Título columna 1</th>
-              <th scope="col" class="especial">Título columna 2</th>
+              <th scope="col" class="especial">Color</th>
+              <th scope="col" class="especial">Código</th>
             </tr>
           </thead>
 
           <tfoot>
             <tr>
               <th scope="col"></th>
-              <th scope="col">Título columna 1</th>
-              <th scope="col">Título columna 2</th>
+              <th scope="col">Negro</th>
+              <th scope="col">Blanco</th>
             </tr>
           </tfoot>
 
           <tbody>
             <tr>
               <th scope="row" class="especial">Título fila 1</th>
-              <td>Donec purus ipsum</td>
+              <td>Negro</td>
               <td>Curabitur <em>blandit</em></td>
             </tr>
             <tr>
               <th scope="row">Título fila 2</th>
-              <td>Donec <strong>purus ipsum</strong></td>
+              <td>Azul <strong>oscuro</strong></td>
               <td>Curabitur blandit</td>
             </tr>
           </tbody>
       </table>
 
       <div id="adicional">
-          <p>Donec purus ipsum, posuere id, venenatis at, <span>placerat ac, lorem</span>. Curabitur blandit, eros sed gravida aliquet, risus justo
-          porta lorem, ut mollis lectus tortor in orci. Pellentesque nec augue.</p>
+          <p>Colores seguros Web surgió durante los inicios de <span>internet</span>. una paleta de 216 colores que aparece sistemáticamente en todos los navegadores principales.</p>
 
           <p>Fusce nec felis eu diam pretium adipiscing. <span id="especial">Nunc elit elit, vehicula vulputate</span>, venenatis in,
           posuere id, lorem. Etiam sagittis, tellus in ultrices accumsan, diam nisi feugiat ante, eu congue magna mi non nisl.</p>
