--- a/EjerciciosCSS/HTML/Ejercicio2.html
+++ b/EjerciciosCSS/HTML/Ejercicio2.html
@@ -51,11 +51,10 @@
       <div id="adicional">
           <p>Colores seguros Web surgió durante los inicios de <span>internet</span>. una paleta de 216 colores que aparece sistemáticamente en todos los navegadores principales.</p>
 
-          <p>Fusce nec felis eu diam pretium adipiscing. <span id="especial">Nunc elit elit, vehicula vulputate</span>, venenatis in,
-          posuere id, lorem. Etiam sagittis, tellus in ultrices accumsan, diam nisi feugiat ante, eu congue magna mi non nisl.</p>
+          <p>Búsqueda de que color perfecto <span id="especial">nunca ha sido tan fácil</span>, rápido,
+          y divertido. Utilice nuestro selector de color HTML para examinar millones de colores y de las armonías cromáticas.</p>
 
-          <p>Vivamus ultrices aliquet augue. <a href="#">Donec arcu pede, pretium vitae</a>, rutrum aliquet, tincidunt blandit, pede.
-          Aliquam in nisi. Suspendisse volutpat. Nulla facilisi. Ut ullamcorper nisi quis mi.</p>
+          <p>Utilice nuestro selector de colores <a href="https://htmlcolorcodes.com/es/tabla-de-colores/">Color Selector</a>, Entrada Hex, RGB, los valores HSL o CMYK para buscar un color en particular en los campos siguientes la muestra de color.</p>
       </div>
 
   </body>
