--- a/EjerciciosCSS/HTML/Ejercicio2.html
+++ b/EjerciciosCSS/HTML/Ejercicio2.html
@@ -29,19 +29,19 @@
           <tfoot>
             <tr>
               <th scope="col"></th>
-              <th scope="col">Negro</th>
-              <th scope="col">Blanco</th>
+              <th scope="col">clasificación</th>
+              <th scope="col">insertable</th>
             </tr>
           </tfoot>
 
           <tbody>
             <tr>
-              <th scope="row" class="especial">Título fila 1</th>
+              <th scope="row" class="especial">Color 1</th>
               <td>Negro</td>
               <td>#<em>17202A</em></td>
             </tr>
             <tr>
-              <th scope="row">Título fila 2</th>
+              <th scope="row">Color 2</th>
               <td>Azul <strong>oscuro</strong></td>
               <td>#154360</td>
             </tr>
