--- a/EjerciciosCSS/HTML/Ejercicio3.html
+++ b/EjerciciosCSS/HTML/Ejercicio3.html
@@ -8,7 +8,7 @@
 <title> Ejercicio 3 de CSS </title>
 </head>    
     <body>
-        <h1> Ejercicio 3 del libro CSS</h1>
+        <h1 id="encabezado"> Ejercicio 3 del libro CSS</h1>
         <br/>
         <br/>
 
